# ai-tools

./: .gitignore  README.md
.github/workflows/: ragbook_local-tests.yml
projects/slack_rag_assistant/: run.sh
projects/slack_rag_assistant/app/: __init__.py  llm_interface.py  retriever.py  (+4 more)
ragbook_local/: CHANGELOG.md  Makefile  README.md  config.example.yaml  copilot-instructions.md  docker-compose.yml  pyproject.toml
ragbook_local/src/ragbook/: __init__.py  chat_engine.py  cli.py  config.py  guardrails.py  prompting.py  retrieval.py  ui.py
ragbook_local/src/ragbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ragbook_local/src/ragbook/ingest/: chunking.py  ocr.py  pdf_text.py
ragbook_local/tests/: test_chat_engine_bm25_load.py  test_chat_engine_reranked_flag.py  test_chunking.py  test_chunking_context.py  test_claim_check.py  test_cli_bm25_force.py  test_guardrails.py  test_integration_claim_check_de.py  test_rerank_fallback.py  test_retrieval_german.py
slack_rag_assistant/: .gitignore  README.md  main.py  requirements.txt
slack_rag_assistant/app/: embedding_service.py  feedback_handler.py  summarizer.py
slack_rag_assistant/config/: config.yaml
slack_rag_assistant/data/: kb_articles.json
slack_rag_assistant/scripts/: ingest_docs.py
src/ragbook/: cli.py  config.py  embeddings.py  indexer.py  llm.py  store.py
tests/: test_cli_bm25.py  test_integration_claim_check.py  test_ocr_pipeline.py  test_retrieval_hybrid.py
udacity-project-apply-lightweight-fine-tuning/workspace/: LightweightFineTuning.ipynb  saru-peft-model.ipynb
(+7 files in other folders)
