[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragbook"
version = "0.1.0"
description = "Lokales RAG für technische PDFs mit Qdrant + Gradio"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="brian"}]

dependencies = [
  "qdrant-client>=1.9.0",
  "gradio>=4.44.0",
  "pymupdf>=1.24.0",
  "pyyaml>=6.0.1",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
  "sentence-transformers>=3.0.0",
  "rank-bm25>=0.2.2",
  "httpx>=0.27.0",
  "typer>=0.12.3",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
